Pygments changelog
==================

Since 2.5.0, issue numbers refer to the tracker at
<https://github.com/pygments/pygments/issues>,
pull request numbers to the requests at
<https://github.com/pygments/pygments/pulls>.


Version 2.6
-----------
(not released yet)

- Support HTTP 2/3 header (PR#1308)
- Boogie/Silver: support line continuations and triggers, move contract keywords
  to separate category (PR#1299)


Version 2.5.2
-------------
(released November 29, 2019)

- Fix incompatibility with some setuptools versions (PR#1316)

- Fix lexing of ReST field lists (PR#1279)
- Fix lexing of Matlab keywords as field names (PR#1282)
- Recognize double-quoted strings in Matlab (PR#1278)
- Avoid slow backtracking in Vim lexer (PR#1312)
- Fix Scala highlighting of types (PR#1315)
- Highlight field lists more consistently in ReST (PR#1279)
- Fix highlighting Matlab keywords in field names (PR#1282)
- Recognize Matlab double quoted strings (PR#1278)
- Add some Terraform keywords
- Update Modelica lexer to 3.4
- Update Crystal examples


Version 2.5.1
-------------
(released November 26, 2019)

- This release fixes a packaging issue. No functional changes.


Version 2.5.0
-------------
(released November 26, 2019)

- Added lexers:

  * Email (PR#1246)
  * Erlang, Elixir shells (PR#823, #1521)
  * Notmuch (PR#1264)
  * `Scdoc <https://git.sr.ht/~sircmpwn/scdoc>`_ (PR#1268)
  * `Solidity <https://solidity.readthedocs.io/>`_ (#1214)
  * `Zeek <https://www.zeek.org>`_ (new name for Bro) (PR#1269)
  * `Zig <https://ziglang.org/>`_ (PR#820)

- Updated lexers:

  * Apache2 Configuration (PR#1251)
  * Bash sessions (#1253)
  * CSound (PR#1250)
  * Dart
  * Dockerfile
  * Emacs Lisp
  * Handlebars (PR#773)
  * Java (#1101, #987)
  * Logtalk (PR#1261)
  * Matlab (PR#1271)
  * Praat (PR#1277)
  * Python3 (PR#1255)
  * Ruby
  * YAML (#1528)
  * Velocity

- Added styles:

  * Inkpot (PR#1276)

- The ``PythonLexer`` class is now an alias for the former ``Python3Lexer``.