@@ -11,6 +11,8 @@ Version 2.6
 -----------
 (not released yet)
 
+- The 256-color/true-color terminal formatters now support the italic attribute
+  in styles (PR#1288)
 - Support HTTP 2/3 header (PR#1308)
 - Boogie/Silver: support line continuations and triggers, move contract keywords
   to separate category (PR#1299)
